Reordered the nav bar items. Fixed an issue where the subtitle next to the header was wrapping down below the header image

--- a/src/main/webapp/css/doecode.css
+++ b/src/main/webapp/css/doecode.css
@@ -739,7 +739,7 @@ label {
 
 .header-logo-img {
     padding-top: 5px;
-    width: 287px;
+    width: 250px;
 }
 
 .header-logo-img-homepage {
